<resources>
    <string name="app_name">Libri</string>
    <string name="cadastroUsuarioTitulo">Cadastro de usuário</string>
    <string name="txtNome">Nome</string>
    <string name="txtSobrenome">Sobrenome</string>
    <string name="txtEmail">Email</string>
    <string name="txtLogin">Login</string>
    <string name="txtSenha">Senha</string>
    <string name="mensagem_cadastro_usuario">Você está cadastrando um usuário</string>
    <string name="salvar">SALVAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="cadastroLivroTitulo">Cadastro de livro</string>
    <string name="txtNomeLivro">Nome do livro</string>
    <string name="txtLivroDescricao">Descrição do livro</string>
    <string name="txtLivroFoto">Foto</string>
    <string name="mensagem_cadastro_livro">Você está cadastrando um livro</string>
    <string name="entrar">Entrar</string>
</resources>