<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroLivroActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        tools:context=".CadastroLivroActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/cabin"
            android:text="@string/cadastroLivroTitulo"
            style="@style/textTitulo"/>

        <EditText
            android:id="@+id/txtTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:hint="@string/txtNomeLivro"
            android:inputType="text"
            android:textAlignment="viewStart"
            style="@style/editText"/>

        <EditText
            android:id="@+id/txtLivroDescricao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:hint="@string/txtLivroDescricao"
            android:inputType="text"
            android:textAlignment="viewStart"
            style="@style/editText"/>

        <EditText
            android:id="@+id/txtLivroFoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:hint="@string/txtLivroFoto"
            android:inputType="text"
            android:textAlignment="viewStart"
            style="@style/editText"/>

        <Button
            android:id="@+id/btnCadastrarLivro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cadastrar"
            android:fontFamily="@font/cabin"
            style="@style/btnForm"/>

    </LinearLayout>

</ScrollView>